// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Take Snapshot 1`] = `
<DocumentFragment>
  <button
    class="button inline-flex items-center justify-center rounded-lg focus:outline-none focus-visible:ring focus-visible:ring-primary-500 transition-colors duration-75 min-h-[34px] py-1.5 px-2.5 font-bold md:min-h-[42px] md:py-2 md:px-3 text-sm md:text-base border border-primary-600 text-primary-600 disabled:bg-primary-100 disabled:border-primary-300 hover:disable:text-primary-300 hover:bg-primary-600 active:bg-primary-700 hover:text-white disabled:cursor-not-allowed"
    type="button"
  >
    Snapshot
  </button>
</DocumentFragment>
`;

exports[`Button Take Snapshot 2`] = `
<DocumentFragment>
  <button
    class="button inline-flex items-center justify-center rounded-lg focus:outline-none focus-visible:ring focus-visible:ring-primary-500 transition-colors duration-75 min-h-[34px] py-1.5 px-2.5 font-bold md:min-h-[42px] md:py-2 md:px-3 text-sm md:text-base text-typo-secondary border border-typo-outline hover:bg-secondary-200 active:bg-secondary-400 disabled:bg-secondary-300 disabled:brightness-95 disabled:cursor-not-allowed"
    type="button"
  >
    Snapshot
  </button>
</DocumentFragment>
`;
